--- a/css/adv_css_responsive_design/page2.html
+++ b/css/adv_css_responsive_design/page2.html
@@ -8,16 +8,18 @@
         default to normal zoom level, width properly set
     -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles2.css" />
 </head>
 
 <body>
-    <div class="main">
+    <div class="grid">
         <div class="box"></div>
-    </div>
-    <div class="sidebar">
-        <div class="box">
-        </div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
     </div>
 </body>
 
