responsive design pt2

--- a/css/adv_css_responsive_design/page3.html
+++ b/css/adv_css_responsive_design/page3.html
@@ -16,10 +16,7 @@
     <div class="box-2">This really comes down to whether you believe the Knicks are a better destination for George than
         the Philadelphia 76ers, who have max cap space (and then some) and have been most frequently mentioned as the
         biggest threat to sign PG away from the Los Angeles Clippers.
-
-        The case for Philly is pretty simple: It has Joel Embiid, Tyrese Maxey and unfettered ambition. But are we sure
-        the Sixers, with virtually no one else under contract and the colossal variable of Embiid's health, are the
-        absolute best place for George to play out the late-prime years of his career?</div>
+    </div>
 </body>
 
 </html>
